Complete donation system overhaul - Authentication system with SimpleAuthContext - Admin dashboard with cause management - Image upload functionality for causes - Payment processing with Paystack - Responsive UI components and navigation - Email service integration - Ready for production deployment

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ yarn-error.log*
 next-env.d.ts
 
 /app/generated/prisma
+deploy.sh
+# Exclude specific markdown files (but keep README.md)
+LECTURER_QUESTIONS.md
+PROJECT_REPORT.md
