--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,27 @@
 {
     "cSpell.words": [
+        "Addo",
         "AIRTEL",
+        "Appiah",
+        "Ayim",
+        "Botchway",
+        "Briamah",
         "ECOBANK",
         "Español",
         "Français",
         "givehope",
+        "kojo",
         "MOMO",
         "NEXTAUTH",
+        "Ntri",
+        "Paystack",
+        "Peprah",
         "sendgrid",
+        "standups",
+        "Supabase",
+        "Umar",
+        "WCAG",
+        "Yussif",
         "العربية"
     ]
 }
