--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "framework": "nextjs",
   "functions": {
     "app/api/**/*.ts": {
-      "runtime": "nodejs18.x"
+      "runtime": "@vercel/node@18"
     }
   },
   "env": {
