--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
   "buildCommand": "npm run vercel-build",
   "installCommand": "npm install",
-  "framework": "nextjs",
-  "functions": {
-    "app/api/**/*.ts": {
-      "runtime": "@vercel/node@18"
-    }
-  },
-  "env": {
-    "PRISMA_GENERATE_DATAPROXY": "true"
-  }
+  "framework": "nextjs"
 }
